test/errors/constraints_error/zs/none_boolean_expression_error.zs
package none_boolean_expression_error;

struct NoneBooleanExpressionError
{
    int32       value;
    uint8       constraintValue : value;
};
